--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
     font-family: "Roboto", sans-serif;
     font-style: normal;
 }
-
 body {
     background: #ffffff;
 }
@@ -22,56 +21,32 @@ body {
 }
 .heading {
     font-weight: 500;
-
     margin: 120px 567px 20px;
     text-align: center;
-
     color: #383838;
     font-size: 40px;
 }
-/*Var 2*/
-/*.vectors{*/
-/*    display: flex;*/
-/*    justify-content: space-around;*/
-/*}*/
-/*.vectors-img{*/
-/*    margin-bottom: 57px;*/
-/*}*/
 
-/*.img-text{*/
-/*    display: flex;*/
-/*    justify-content: space-around;*/
-/*}*/
-/*.img-text-w{*/
-/*    margin: 0;*/
-/*    font-size: 24px;*/
-/*    line-height: 28px;*/
-/*    text-align: center;*/
-/*    color: #383838;*/
-/*}*/
 .down .img-text-v {
     display: inline;
 }
 .down {
     margin-bottom: 20px;
 }
-.img-text {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 17px;
-    line-height: 28px;
-    text-align: center;
+img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
 }
+
 .vectors-img {
     margin: 0;
 }
 .img-text-v {
-    margin: 0;
     font-style: normal;
     font-weight: normal;
     font-size: 17px;
-    line-height: 28px;
+    line-height: 150%;
 }
 .vectors {
     text-align: center;
