--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 150%;
 }
 .vectors {
   margin: 0;
@@ -64,17 +64,17 @@ body {
 }
 
 /* footer */
-footer {
+.footer {
   background: #10367c;
   height: 630px;
 }
-.bb {
+.footer-about {
   display: flex;
 }
-.aa {
+.about {
   margin: 120px 180px 120px 120px;
 }
-.aaa {
+.property {
   margin: 120px 284px 0 0;
 }
 li {
@@ -87,7 +87,7 @@ li {
 .otdelni {
   padding: 0;
 }
-.nf {
+.triphouse {
   margin: 0 120px;
 
   font-size: 16px;
