--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family:'Roboto-Light';
+    font-family:'Roboto';
     font-style: normal;
     font-weight: 400;
     font-display: swap;
     src: url(./../fonts/Roboto-Light.woff2) format('woff2');
 }
 @font-face {
-    font-family:'Roboto-Medium';
+    font-family:'Roboto';
     font-style: normal;
     font-weight: 500;
     font-display: swap;
