--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("./fonts.css");
 * {
   box-sizing: border-box;
   max-width: 1440px;
@@ -7,7 +8,7 @@
 }
 
 body {
-  background: #fdfdfd;
+  background-color: #fdfdfd;
   margin: 0;
 }
 /*1 sld*/
@@ -31,6 +32,7 @@ body {
   height: 105px;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 
 .menu{
@@ -42,17 +44,24 @@ body {
 
 a{
   text-decoration: none;
-  display: inline-block;
+  display: inline;
+  border-bottom: 0.25em solid transparent;
 }
 
+
 a:hover{
-  padding-bottom: 12px;
-  border-bottom: 4px solid #F5BD41;
-  display:inline-block;
+  border-bottom: 0.25em solid #F5BD41;
+}
+
+button{
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .a_menu{
-  padding: 0 12px;
+  margin: 0 12px;
   font-size: 1.5rem;
   line-height: 1.75em;
   color: #FFFFFF;
@@ -85,8 +94,8 @@ a:hover{
   font-size: 3.1em;
   line-height: 100%;
   color: #FFFFFF;
-  margin: 0;
-  padding-left: 104px;
+  margin-left: 104px;
+  display: inline-block;
 }
 
 label{
@@ -96,6 +105,10 @@ label{
 input:hover{
   border: 4px solid #F5BD41;
   border-radius: 8px;
+}
+input:focus{
+  outline: none;
+  border: 4px solid #F5BD41;
 }
 
 .search-p{
@@ -118,38 +131,43 @@ input:hover{
 }
 
 .hotel-search-input{
-  max-width: 30.825em;
+  max-width: 25.725em;
   width: 100%;
   margin: 0;
   height: 64px;
-  border-style: none;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
+  border-radius: 8px;
+  padding-left:10px;
+  border: 4px solid transparent;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  color: #383838;
 }
 
 .start-search-input{
-  max-width: 16.188em;
+  max-width: 17.625em;
   width: 100%;
   margin: 0;
   height: 64px;
+  border-radius: 8px;
   font-size: 1.1em;
   line-height: 1.3em;
   text-align: center;
   color: #383838;
-  border-style: none;
+  border: 4px solid transparent;
 }
 
 .start-search-name{
-  max-width: 19.625em;
+  max-width: 16.095em;
   width: 100%;
   margin: 0;
   height: 64px;
   position: relative;
-  border-style: none;
   font-size: 1.1em;
   line-height: 1.3em;
   text-align: center;
   color: #383838;
+  border: 4px solid transparent;
+  border-radius: 8px;
 }
 /* кнопка */
 .btm-search{
@@ -157,11 +175,11 @@ input:hover{
   width: 192px;
   background-color:  #3077C6;
   border-radius: 8px;
-  border-style: none;
   font-size: 1.5em;
   line-height: 1.7em;
   color: #FFFFFF;
   display: unset;
+  border: 4px solid transparent;
 }
 input{
   background-color: white;
