--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+@media  screen and (max-width:575px){
+  section{
+    overflow-x:hidden
+  }
+  img{
+    max-width: 100%;
+  }
+  .figcap{
+    display: none;
+  }
+  figure{
+    margin: 0 5px;
+  }
+  .content-home-img{
+    padding-left: 20px;
+  }
+  .button-imgs{
+    transform: translate(475px,-20px);
+    margin: 0;
+  }
+}
+
+
 @import url("./fonts.css");
 * {
   box-sizing: border-box;
@@ -196,6 +219,7 @@ input{
 .icon-svg-brend{
   margin: 0;
   padding: 0 8px;
+  width: 140px;
 }
 
 /* sl c svg*/
@@ -204,10 +228,10 @@ input{
 }
 
 .highlight {
-  width: 100px;
+ width: 100px;
   height: 4px;
   margin-bottom: 87px;
-  background: #f5bd41;
+ background: #f5bd41;
   border: 0;
 }
 
@@ -217,18 +241,21 @@ input{
   text-align: center;
   color: #383838;
   font-size: 2.5em;
+  text-decoration: none ;
+  border-bottom: 4px solid transparent;
 }
 
 .navlist-block{
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .navlist {
+  position: absolute;
   display: flex;
-  max-width: 1052px;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 0;
   list-style: none;
 }
@@ -299,6 +326,97 @@ li{
   text-align: center;
   color: #383838;
 }
+
+/* Homes guests loves */
+.heading-homes{
+  background: #EAF0F9;
+  height: 51.75em;
+  align-items: center;
+  display: flex;
+}
+
+.content-homes{
+  width: 77em;
+}
+
+.content-home-heading{
+  font-weight: 500;
+  margin: 120px auto 20px;
+  text-align: center;
+  color: #383838;
+  font-size: 2.5em;
+  margin-bottom: 105px;
+  border: 4px solid transparent;
+  position: relative;
+}
+
+.content-home-heading:hover::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  /* right: 47%;  */
+  top: 72px;
+  max-width: 100px;
+  width: 100%;
+  border-bottom: 6px solid #F5BD41;
+}
+img{
+  width: 100%;
+}
+.content-home-img{
+  display: flex;
+  margin-bottom: 80px;
+  position: relative;
+  width: 100%;
+}
+
+.content-home-img-fig{
+  padding-top: 24px;
+  font-weight: 400;
+  font-size: 1.5em;
+  line-height: 1.75em;
+  color: #3077C6;
+}
+
+.content-home-img-p{
+  padding-top: 24px;
+  font-weight: 400;
+  font-size: 1.5em;
+  line-height: 1.75em;
+  color: #BFBFBF;
+}
+.button-img-s{
+  color: rgb(10, 7, 1);
+  height: 18px;
+  width: 7px;
+  padding-top: 3.5px;
+}
+.button-img-s{
+  color: rgb(10, 7, 1);
+  height: 18px;
+  width: 7px;
+  padding-top: 3.5px;
+}
+
+.button-imgs{
+  position: absolute;
+  top: 145px;
+  left: 35px;
+  right: -1185px;
+  bottom: 440px;
+  background: #EAF0F9;
+  font-size: 16px;
+  padding: 4px 4px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 2px 1px 5px;
+}
+
 /* footer*/
 .footer {
   background: #10367c;
