--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,108 @@
+
+@import url("./fonts.css");
 * {
   box-sizing: border-box;
   max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
+  margin: 0 auto;
 }
 
 body {
-  background: #fdfdfd;
+  background-color: #fdfdfd;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+}
+/*1 sld*/
+
+.search-p{
+  font-size: 1.1em;
+  line-height: 1.3em;
+  margin-bottom: 20px;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: flex-start;
 }
 
+.search-p-text{
+  margin: 0;
+  padding-right: 210px;
+}
+
+.search-block{
+  margin: 0;
+  display: flex;
+  background-color: #fdfdfd;
+  border-radius: 8px;
+}
+
+.hotel-search-input{
+  max-width: 25.725em;
+  width: 100%;
+  margin: 0;
+  height: 64px;
+  border-radius: 8px;
+  padding-left:10px;
+  border: 4px solid transparent;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  color: #383838;
+}
+
+.start-search-input{
+  max-width: 17.625em;
+  width: 100%;
+  margin: 0;
+  height: 64px;
+  border-radius: 8px;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  text-align: center;
+  color: #383838;
+  border: 4px solid transparent;
+}
+
+.start-search-name{
+  max-width: 16.095em;
+  width: 100%;
+  margin: 0;
+  height: 64px;
+  position: relative;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  text-align: center;
+  color: #383838;
+  border: 4px solid transparent;
+  border-radius: 8px;
+}
+/* кнопка */
+.btm-search{
+  height: 64px;
+  width: 192px;
+  background-color:  #3077C6;
+  border-radius: 8px;
+  font-size: 1.5em;
+  line-height: 1.7em;
+  color: #FFFFFF;
+  display: unset;
+  border: 4px solid transparent;
+}
+input{
+  background-color: white;
+}
+.icon-svg{
+  display: flex;
+  justify-content: center;
+  padding-bottom: 120px;
+}
+.icon-svg-brend{
+  margin: 0;
+  padding: 0 8px;
+  width: 140px;
+}
+
+/* sl c svg*/
 .advantages {
-  height: 450px;
+  height: 28.125em;
 }
 
 .highlight {
@@ -28,44 +118,211 @@ body {
   margin: 120px auto 20px;
   text-align: center;
   color: #383838;
-  font-size: 40px;
+  font-size: 2.5em;
+  text-decoration: none ;
+  border-bottom: 4px solid transparent;
 }
 
-.down .img-text-v {
-  display: inline;
+.navlist-block{
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
-.img-text {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 17px;
-  line-height: 28px;
-  text-align: center;
+.navlist {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  padding: 0;
+  list-style: none;
 }
+.navlist .support {
 
-.vectors-img {
   width: 100px;
   height: 100px;
-  object-fit: contain;
-  margin:0 auto 48px;
-  display: block;
-  object-position: center;
+  margin: 0;
+  object-position: 7.143% 92.857%;
+  object-fit: none;
 }
 
-.img-text-v {
+.navlist .com{
+
+  width: 100px;
+  height: 100px;
+  margin: 0;
+  object-position: 92.857% 7.143%;
+  object-fit: none;
+}
+
+.navlist .book{
+
+  width: 100px;
+  height: 100px;
+  margin: 0;
+  object-position: 7.143% 7.143%;
+  object-fit: none;
+}
+
+.navlist .like{
+
+  width: 100px;
+  height: 100px;
+  margin: 0;
+  object-position: 92.857% 92.857%;
+  object-fit: none;
+}
+
+.navlist-text{
+  display: flex;
+  list-style: none;
+  max-width: 1435px;
+  width: 100%;
+  justify-content: space-evenly;
+  padding: 0;
+  object-position: 7.143% 92.857%;
+  object-fit: none;
+}
+.navlist-text{
+  display: flex;
+  list-style: none;
+  max-width: 1435px;
+  width: 100%;
+  justify-content: space-evenly;
+  padding: 0;
+  object-position: 7.143% 92.857%;
+  object-fit: none;
+}
+li{
   margin: 0;
   font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 150%;
+  font-weight: 400;
+  font-size: 1.5em;
+  line-height: 3em;
+  text-align: center;
+  color: #383838;
 }
 
-.vectors {
+.content-home-heading{
+  font-weight: 500;
+  margin: 120px auto 105px;
+  text-align: center;
+  color: #383838;
+  font-size: 2.5em;
+  border: 4px solid transparent;
+  position: relative;
+}
+
+.content-home-heading:hover::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  /* right: 47%;  */
+  top: 72px;
+  max-width: 100px;
+  width: 100%;
+  border-bottom: 6px solid #F5BD41;
+}
+img{
+  width: 100%;
+}
+
+/* footer*/
+.footer {
+  background: #10367c;
+}
+
+.footer-about {
+  display: flex;
+  padding-top: 120px;
+  justify-content: space-around;
+  max-width: 1064px;
+  width: 100%;
   margin: 0;
 }
 
-.content {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 206px;
+.footer-text {
+  list-style: none;
+  margin-bottom: 24px;
+  font-size: 1.25em;
+  line-height: 1em;
+  color: #ffffff;
+  text-align: left;
+}
+
+.bold-footer-text {
+  list-style: none;
+  margin-bottom: 24px;
+  font-size: 1.25em;
+  line-height: 1em;
+  color: #ffffff;
+  text-align: left;
+  font-weight: 600;
+}
+
+.otdelni {
+  padding: 0;
+}
+
+.triphouse {
+  margin-left: 104px;
+  padding-bottom: 120px;
+  font-size: 1em;
+  line-height: 4em;
+  color: #ffffff;
+}
+
+@media screen  and (max-width: 575px) {
+  section {
+    width: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden;
+  }
+
+  #advantages {
+    height: 910px;
+  }
+
+  #content-home-heading{
+    margin: 40px auto;
+  }
+
+  .navlist {
+    flex-direction: column;
+  }
+
+  .footer-text {
+    display: none;
+  }
+
+  .footer-about{
+    background: url('../img/logo_vector.png') no-repeat 50% 30%;
+    align-items: end;
+    flex-direction: unset;
+    justify-content: stretch;
+    padding: 0 67px;
+    font-size: 18px;
+    background-size: 150px 30px;
+    height: 200px;
+  }
+  .bold-footer-text {
+    border-bottom: 1px solid #fdfdfd;
+  }
+
+  .otdelni{
+    margin: 0;
+  }
+
+  .triphouse {
+    flex-direction: column;
+    align-items: center;
+    padding-top:32px ;
+  }
+
+  .triphouse-p{
+    line-height: 1.9em;
+    white-space: nowrap;
+    font-size: 20px;
+  }
 }
