--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 
-@import url("./fonts.css");
 * {
   box-sizing: border-box;
-  max-width: 1440px;
-  margin: 0 auto;
+
+
 }
 
 body {
-  background-color: #fdfdfd;
-  margin: 0;
   font-family: "Roboto", sans-serif;
   font-style: normal;
+  background-color: #fdfdfd;
+  margin: 0;
 }
-/*1 sld*/
+
 
 .search-p{
   font-size: 1.1em;
@@ -22,85 +21,16 @@ body {
   display: flex;
   justify-content: flex-start;
 }
-
 .search-p-text{
   margin: 0;
   padding-right: 210px;
 }
-
 .search-block{
   margin: 0;
   display: flex;
   background-color: #fdfdfd;
   border-radius: 8px;
 }
-
-.hotel-search-input{
-  max-width: 25.725em;
-  width: 100%;
-  margin: 0;
-  height: 64px;
-  border-radius: 8px;
-  padding-left:10px;
-  border: 4px solid transparent;
-  font-size: 1.1em;
-  line-height: 1.3em;
-  color: #383838;
-}
-
-.start-search-input{
-  max-width: 17.625em;
-  width: 100%;
-  margin: 0;
-  height: 64px;
-  border-radius: 8px;
-  font-size: 1.1em;
-  line-height: 1.3em;
-  text-align: center;
-  color: #383838;
-  border: 4px solid transparent;
-}
-
-.start-search-name{
-  max-width: 16.095em;
-  width: 100%;
-  margin: 0;
-  height: 64px;
-  position: relative;
-  font-size: 1.1em;
-  line-height: 1.3em;
-  text-align: center;
-  color: #383838;
-  border: 4px solid transparent;
-  border-radius: 8px;
-}
-/* кнопка */
-.btm-search{
-  height: 64px;
-  width: 192px;
-  background-color:  #3077C6;
-  border-radius: 8px;
-  font-size: 1.5em;
-  line-height: 1.7em;
-  color: #FFFFFF;
-  display: unset;
-  border: 4px solid transparent;
-}
-input{
-  background-color: white;
-}
-.icon-svg{
-  display: flex;
-  justify-content: center;
-  padding-bottom: 120px;
-}
-.icon-svg-brend{
-  margin: 0;
-  padding: 0 8px;
-  width: 140px;
-}
-
-/* sl c svg*/
 .advantages {
   height: 28.125em;
 }
@@ -137,8 +67,8 @@ input{
   padding: 0;
   list-style: none;
 }
-.navlist .support {
 
+.navlist .support {
   width: 100px;
   height: 100px;
   margin: 0;
@@ -147,7 +77,6 @@ input{
 }
 
 .navlist .com{
-
   width: 100px;
   height: 100px;
   margin: 0;
@@ -156,7 +85,6 @@ input{
 }
 
 .navlist .book{
-
   width: 100px;
   height: 100px;
   margin: 0;
@@ -165,7 +93,6 @@ input{
 }
 
 .navlist .like{
-
   width: 100px;
   height: 100px;
   margin: 0;
@@ -183,6 +110,7 @@ input{
   object-position: 7.143% 92.857%;
   object-fit: none;
 }
+
 .navlist-text{
   display: flex;
   list-style: none;
@@ -193,12 +121,13 @@ input{
   object-position: 7.143% 92.857%;
   object-fit: none;
 }
+
 li{
   margin: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 1.5em;
-  line-height: 3em;
+  line-height: 1.8em;
   text-align: center;
   color: #383838;
 }
@@ -213,24 +142,35 @@ li{
   position: relative;
 }
 
-.content-home-heading:hover::before {
+.content-home-heading:before {
   content: "";
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  /* right: 47%;  */
   top: 72px;
   max-width: 100px;
   width: 100%;
   border-bottom: 6px solid #F5BD41;
 }
+
 img{
   width: 100%;
 }
+.advantages-width{
+  max-width: 1440px;
+  margin: 0 auto;
+}
 
 /* footer*/
-.footer {
-  background: #10367c;
+
+footer{
+  background-color: #10367c;
+  width: 100%;
+}
+
+.fotter-width{
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .footer-about {
@@ -254,7 +194,7 @@ img{
 .bold-footer-text {
   list-style: none;
   margin-bottom: 24px;
-  font-size: 1.25em;
+  font-size: 1.25rem;
   line-height: 1em;
   color: #ffffff;
   text-align: left;
@@ -266,22 +206,32 @@ img{
 }
 
 .triphouse {
-  margin-left: 104px;
   padding-bottom: 120px;
   font-size: 1em;
   line-height: 4em;
   color: #ffffff;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 6%;
 }
 
-@media screen  and (max-width: 575px) {
-  section {
-    width: 100%;
+.triphouse-p{
+  margin: 0;
+}
+
+@media  screen and (max-width:575px){
+  section{
     overflow-x:hidden;
-    overflow-y:hidden;
+    overflow-y: hidden;
+  }
+  img{
+    max-width: 100%;
   }
 
+  /*Discover stays to live, work or just relax*/
   #advantages {
     height: 910px;
+    margin-bottom: 40px;
   }
 
   #content-home-heading{
@@ -292,15 +242,17 @@ img{
     flex-direction: column;
   }
 
+  /* footer */
   .footer-text {
     display: none;
   }
 
   .footer-about{
     background: url('../img/logo_vector.png') no-repeat 50% 30%;
+    display: flex;
+    justify-content: space-around;
     align-items: end;
     flex-direction: unset;
-    justify-content: stretch;
     padding: 0 67px;
     font-size: 18px;
     background-size: 150px 30px;
@@ -315,14 +267,47 @@ img{
   }
 
   .triphouse {
-    flex-direction: column;
-    align-items: center;
-    padding-top:32px ;
+    padding: 20px 1% 50px !important;
+    display: flex;
+    justify-content: center;
   }
 
   .triphouse-p{
     line-height: 1.9em;
     white-space: nowrap;
-    font-size: 20px;
+    font-size: 1.22rem;
+    padding: 0 10px;
+
   }
+}
+
+@media  screen and (max-width: 960px) {
+
+  section {
+    width: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden
+  }
+
+  /* footer */
+  .footer-about{
+    padding: 120px 6% 0;
+  }
+  .otdelni{
+    padding: 0 5px;
+  }
+
+  .triphouse{
+    margin: 0 10%;
+  }
+
+}
+
+@media screen and (max-width: 1440px) {
+
+  /* footer */
+  .triphouse{
+    padding: 0 1% 120px;
+  }
+
 }
