--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,23 @@
 @import url("./fonts.css");
 * {
   box-sizing: border-box;
-  max-width: 1440px;
-  margin: 0 auto;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
 }
 
 body {
   background-color: #fdfdfd;
   margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
 }
-/*1 sld*/
+/*Discover stays to live, work or just relax*/
+
+.discover-bg{
+  background: url('../img/castelmezzano-1979546 1.png') center no-repeat;
+}
+
 .content{
-  background-image: url('../img/castelmezzano-1979546 1.png');
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .logo_vector{
@@ -41,18 +45,35 @@ body {
   padding: 0;
   display: flex;
   align-items: center;
+  overflow:hidden;
 }
 
-a{
+.menu a{
   text-decoration: none;
-  display: inline;
+  display: inline-block;
   border-bottom: 0.25em solid transparent;
-  transition: all 0.35s ease;
+  top:0;
+  margin: 0 12px;
+  font-size: 1.5rem;
+  line-height: 1.75em;
+  color: #FFFFFF;
+  position: relative;
+  cursor: pointer;
+}
+.menu a:after{
+  content: "";
+  background-color: #f66d52
 }
 
-
-a:hover{
-  border-bottom: 0.25em solid #F5BD41;
+.menu a:hover::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  top: 42px;
+  right: 45px;
+  transform: translateX(50%);
+  border-bottom: 0.25em solid rgba(245, 189, 65, 1);
+  transition: all .3s ease;
 }
 
 button{
@@ -60,13 +81,6 @@ button{
   border: none;
   background-color: transparent;
   cursor: pointer;
-}
-
-.a_menu{
-  margin: 0 12px;
-  font-size: 1.5rem;
-  line-height: 1.75em;
-  color: #FFFFFF;
 }
 
 .img_menu{
@@ -117,25 +131,6 @@ input:focus{
   border: 4px solid #F5BD41;
 }
 
-.search-p{
-  font-size: 1.1em;
-  line-height: 1.3em;
-  margin-bottom: 20px;
-  color: #FFFFFF;
-  display: flex;
-  justify-content: flex-start;
-}
-.search-p-text{
-  margin: 0;
-  padding-right: 210px;
-}
-.search-block{
-  margin: 0;
-  display: flex;
-  background-color: #fdfdfd;
-  border-radius: 8px;
-}
-
 .hotel-search-input{
   max-width: 25.725em;
   width: 100%;
@@ -148,9 +143,8 @@ input:focus{
   line-height: 1.3em;
   color: #383838;
 }
-
 .start-search-input{
-  max-width: 17.625em;
+  max-width: 18.685em;
   width: 100%;
   margin: 0;
   height: 64px;
@@ -163,7 +157,7 @@ input:focus{
 }
 
 .start-search-name{
-  max-width: 16.095em;
+  max-width: 18.195em;
   width: 100%;
   margin: 0;
   height: 64px;
@@ -176,7 +170,7 @@ input:focus{
   border-radius: 8px;
 }
 /* кнопка */
-.btm-search{
+.btm-search-input{
   height: 64px;
   width: 192px;
   background-color:  #3077C6;
@@ -200,18 +194,33 @@ input{
   padding: 0 8px;
   width: 140px;
 }
-
-/* sl c svg*/
+/* What do we offer */
 .advantages {
   height: 28.125em;
 }
 
-.highlight {
- width: 100px;
-  height: 4px;
-  margin-bottom: 87px;
- background: #f5bd41;
-  border: 0;
+.advantages-width{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.search-p{
+  font-size: 1.1em;
+  line-height: 1.3em;
+  margin-bottom: 20px;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: flex-start;
+}
+.search-p-text{
+  margin: 0;
+  padding-right: 210px;
+}
+.search-block{
+  margin: 0;
+  display: flex;
+  background-color: #fdfdfd;
+  border-radius: 8px;
 }
 
 .heading {
@@ -239,7 +248,6 @@ input{
   list-style: none;
 }
 .navlist .support {
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -248,7 +256,6 @@ input{
 }
 
 .navlist .com{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -257,7 +264,6 @@ input{
 }
 
 .navlist .book{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -266,7 +272,6 @@ input{
 }
 
 .navlist .like{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -301,26 +306,26 @@ li{
   font-style: normal;
   font-weight: 400;
   font-size: 1.5em;
-  line-height: 3em;
+  line-height: 1.9em;
   text-align: center;
   color: #383838;
 }
-
 /* Homes guests loves */
+.homes-bg{
+  background-color: #EAF0F9;
+}
 .heading-homes{
-  background: #EAF0F9;
   height: 51.75em;
   align-items: center;
   display: flex;
-}
-
-.content-homes{
-  width: 77em;
+  justify-content: space-evenly;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .content-home-heading{
   font-weight: 500;
-  margin: 120px auto 20px;
+  margin: 120px auto 105px;
   text-align: center;
   color: #383838;
   font-size: 2.5em;
@@ -339,13 +344,16 @@ li{
   border-bottom: 6px solid #F5BD41;
 }
 
+figure{
+margin: 0 8px;
+}
 img{
   width: 100%;
 }
 
 .content-home-img{
   display: flex;
-  margin-bottom: 80px;
+  margin-bottom: 47px;
   position: relative;
   width: 100%;
 }
@@ -359,7 +367,6 @@ img{
 }
 
 .content-home-img-p{
-  padding-top: 24px;
   font-weight: 400;
   font-size: 1.5em;
   line-height: 1.75em;
@@ -382,10 +389,8 @@ img{
 
 .button-imgs{
   position: absolute;
-  top: 145px;
-  left: 35px;
-  right: -1185px;
-  bottom: 440px;
+  left: 97.6%;
+  transform: translateY(340%);
   background: #EAF0F9;
   font-size: 16px;
   padding: 4px 4px;
@@ -397,19 +402,25 @@ img{
   text-align: center;
   box-shadow: 2px 1px 5px;
 }
-
 /* footer*/
-.footer {
-  background: #10367c;
+footer{
+  background-color: #10367c;
+  width: 100%;
+}
+
+.fotter-width{
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .footer-about {
   display: flex;
   padding-top: 120px;
-  justify-content: space-around;
-  max-width: 1064px;
+  justify-content: space-between;
+  max-width: 1164px;
   width: 100%;
   margin: 0;
+  padding-left: 104px;
 }
 
 .footer-text {
@@ -421,40 +432,196 @@ img{
   text-align: left;
 }
 
+.bold-footer-text {
+  list-style: none;
+  margin-bottom: 24px;
+  font-size: 1.25rem;
+  line-height: 1em;
+  color: #ffffff;
+  text-align: left;
+  font-weight: 600;
+}
+
 .otdelni {
   padding: 0;
 }
 
 .triphouse {
-  margin-left: 104px;
   padding-bottom: 120px;
   font-size: 1em;
   line-height: 4em;
   color: #ffffff;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 6%;
 }
 
-.bold {
-  font-weight: 600;
+.triphouse-p{
+  margin: 0;
 }
 
 @media  screen and (max-width:575px){
   section{
-    overflow-x:hidden
+    overflow-x:hidden;
+    overflow-y: hidden;
   }
   img{
-    max-width: 100%;
+    width: 156px;
+    height: 156px;
+  }
+  /*Discover stays to live, work or just relax*/
+  #advantages {
+    height: 910px;
+    margin-bottom: 40px;
+  }
+
+  .navlist {
+    flex-direction: column;
+  }
+/*<!--Homes guests loves-->*/
+  #heading-homes{
+    padding: 0;
+    max-height: 354px;
   }
   .figcap{
     display: none;
   }
+  .content-home-img-fig{
+padding-top: 8px;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .content-home-img-p{
+margin: 0;
+    font-size: 12px;
+    line-height: 14px;
+  }
+.content-home-heading{
+  margin: 40px 0 23px;
+}
   figure{
     margin: 0 5px;
   }
   .content-home-img{
-    padding-left: 20px;
+    padding-left: 20px !important;
   }
   .button-imgs{
-    transform: translate(475px,-20px);
+    transform: translateX(-53%) !important;
+    top: 62px;
+    width: 28px;
+    height: 28px;
+  }
+  /* footer */
+  .footer-text {
+    display: none;
+  }
+
+  .footer-about{
+    background: url('../img/logo_vector.png') no-repeat 50% 30%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: end;
+    flex-direction: unset;
+    padding: 0 32px;
+    font-size: 18px;
+    background-size: 150px 30px;
+    height: 200px;
+  }
+  .bold-footer-text {
+    border-bottom: 1px solid #fdfdfd;
+    font-size: 15px;
+  }
+
+  .otdelni{
     margin: 0;
   }
+
+  .triphouse {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 40px !important;
+  }
+
+  .triphouse-p{
+    line-height: 1.9em;
+    white-space: nowrap;
+    font-size: 0.8rem;
+    padding: 0 10px;
+
+  }
 }
+@media  screen and (max-width: 768px) {
+  section {
+    width: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden
+  }
+  /*Homes guests loves-*/
+  .content-home-img{
+    padding: 0 10px;
+  }
+  #button-imgs{
+    left: 93.6%;
+    transform: translateY(308%);
+  }
+.figcap-768{
+  display: none;
+}
+
+}
+@media  screen and (max-width: 992px) {
+
+  section {
+    width: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden
+  }
+  /*Homes guests loves-*/
+
+  .button-imgs{
+    left: 95.6%;
+    transform: translateY(308%);
+  }
+
+  /* footer */
+  .footer-about{
+    padding: 120px 6% 0;
+  }
+  .otdelni{
+    padding: 0 5px;
+  }
+
+  .triphouse{
+    margin: 0 10%;
+  }
+
+}
+
+@media screen and (max-width: 1220px) {
+  /*Homes guests loves-*/
+
+  .figcap-1220 {
+    display: none;
+  }
+  /* footer */
+  .footer-about{
+    padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1200 - 320)));
+  }
+
+}
+
+@media screen and (max-width: 1440px) {
+
+  /* footer */
+  .triphouse{
+    padding: 0 1% 120px;
+  }
+  /*Homes guests loves-*/
+  .heading-homes{
+    padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1440 - 320)));
+  }
+
+}
+
+
+
