--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,8 @@ body {
   font-style: normal;
 }
 /*Discover stays to live, work or just relax*/
-
 .discover-bg{
-  background: url('../img/castelmezzano-1979546 1.png') center no-repeat;
+  background: url('../img/castelmezzano-1979546 1.png')   50% 0/auto auto no-repeat;
 }
 
 .content{
@@ -87,7 +86,7 @@ button{
   width: 30px;
   height: 30px;
   object-fit: none;
-  object-position:  35.897% 77.778%;
+  object-position:  35% 77%;
 }
 
 .img_menu_acc{
@@ -95,7 +94,7 @@ button{
   width: 40px;
   height: 40px;
   object-fit: none;
-  object-position: 5.405% 87.5%;
+  object-position: 5% 87%;
 }
 
 /* строки */
@@ -212,15 +211,17 @@ input{
 .search-p{
   font-size: 1.1em;
   line-height: 1.3em;
-  margin-bottom: 20px;
+  margin: 20px 0;
   color: #FFFFFF;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  max-width: 640px;
+  width: 100%;
+
 }
 
 .search-p-text{
   margin: 0;
-  padding-right: 210px;
 }
 
 .search-block {
@@ -264,7 +265,7 @@ input{
   width: 100px;
   height: 100px;
   margin: 0;
-  object-position: 7.143% 92.857%;
+  object-position: 7% 92%;
   object-fit: none;
 }
 
@@ -272,7 +273,7 @@ input{
   width: 100px;
   height: 100px;
   margin: 0;
-  object-position: 92.857% 7.143%;
+  object-position: 92% 7%;
   object-fit: none;
 }
 
@@ -280,7 +281,7 @@ input{
   width: 100px;
   height: 100px;
   margin: 0;
-  object-position: 7.143% 7.143%;
+  object-position: 7% 7%;
   object-fit: none;
 }
 
@@ -288,7 +289,7 @@ input{
   width: 100px;
   height: 100px;
   margin: 0;
-  object-position: 92.857% 92.857%;
+  object-position: 92% 92%;
   object-fit: none;
 }
 
@@ -299,7 +300,7 @@ input{
   width: 100%;
   justify-content: space-evenly;
   padding: 0;
-  object-position: 7.143% 92.857%;
+  object-position: 7% 92%;
   object-fit: none;
 }
 
@@ -326,6 +327,7 @@ li{
   justify-content: space-evenly;
   max-width: 1440px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .content-home-heading{
@@ -337,6 +339,18 @@ li{
   border: 4px solid transparent;
   position: relative;
 }
+
+.content-home-heading:hover::before{
+  border-bottom: 4px solid #F5BD41;
+  width: 100%;
+  max-width: 100px;
+  position: absolute;
+  left: 50%;
+  top:72px;
+  transform: translateX(-50%);
+  content: "";
+}
+
 
 .underline:before {
   content: "";
@@ -481,11 +495,8 @@ figure{
   background-color: #EAF0F9;
 }
 
-.profile-bg{
-  background-color: #EAF0F9;
-}
-
 .profile{
+  background-color: #EAF0F9;
   max-width: 1232px;
   height: 200px;
   display: flex;
@@ -630,7 +641,7 @@ footer{
   font-weight: 600;
 }
 
-.otdelni {
+.footet-column {
   padding: 0;
   margin: 0;
 }
