--- a/css/style.css
+++ b/css/style.css
@@ -1167,7 +1167,7 @@ footer{
   }
 
   .img-bg{
-   max-height: 177px;
+   max-height: 180px;
     width: 100%;
   }
 
@@ -1520,7 +1520,7 @@ footer{
 
   }
 
-  @media  screen and (max-width: 992px) {
+@media  screen and (max-width: 992px) {
 
     section {
       width: 100%;
@@ -1592,7 +1592,7 @@ footer{
 
   }
 
-  @media screen and (max-width: 1220px) {
+@media screen and (max-width: 1220px) {
     /*Homes guests loves-*/
 
     .figcap-1220 {
@@ -1814,10 +1814,11 @@ footer{
     }
     .menu{
       padding: 0;
+      margin-right: 25px;
     }
     }
 
-  @media screen and (max-width: 2645px) and (min-width:575px) {
+@media screen and (max-width: 2645px) and (min-width:575px) {
 
     /* footer */
     .triphouse {
